@@ -1069,6 +1069,16 @@ local Shadowlands = {
 			L["Rencissa the Dynamo 1"],
 		},
 	},
+	[163083] = { -- Valuator Malus
+		["g"] = {
+			L["Very well. Let us fight."],
+		},
+	},
+	[163084] = { -- Tester Sahaari
+		["g"] = {
+			L["Very well. Let us fight."],
+		},
+	},
 	-- Ardenweald
 	[171743] = { -- Dapperdew
 		["g"] = {
@@ -1443,8 +1453,6 @@ local creatures = {
 			L["<Reach inside and pull something out.>"], -- Added from Quest: Krazzlefrazz Outpost (Drustvar)
 			L["<Reach inside and pull out something that feels more like a building.>"], -- Added from Quest: Krazzlefrazz Outpost (Drustvar)
 			L["D'kaan is coming with help."], -- Added from Quest: Rescue Rangari (Gorgrond)
-			L["I've heard this tale before..."], -- Added from Quest: ??? (Stormwind City/Orgrimmar)
-			L["Very well. Let us fight."], -- Added from Quest: Test Your Mettle (Maldraxxus)
 			L["Au'narim claims you owe her anima."], -- Added from Quest: Leave Me a Loan (Maldraxxus)
 			L["The Lady of the Falls wanted to make sure you were safe."], -- Added from Quest: Ages-Echoing Wisdom (Ardenweald)
 			L["<Request tithe>"], -- Added from Quest: Bring Out Your Tithe (Revendreth)
