@@ -10,3 +10,4 @@ HelpMePlay | 1.0.6
 		- Fatescribe Roh-Tahl is automated again.
 		- Fixed the dialogs for the NPCs involved in the "A Plague on Your House" quest in Maldraxxus.
 		- Fixed the dialogs for the NPCs involved in the "...Even the Most Ridiculous Request!" quest in Maldraxxus.
+		- Fixed the dialogs for the NPCs involved in the "Test Your Mettle" quest in Maldraxxus.
